# embeddedBeagle

./: README.md
BeatBox/app/: CMakeLists.txt
BeatBox/app/src/: audioMixerTest.c  main.c
BeatBox/hal/include/hal/: accessRot.h  accessSPI.h  audioMixer.h
BeatBox/hal/src/: accessRot.c  accessSPI.c  audioMixer.c  ledControl.c
LinuxLightDipSensor/: CMakeLists.txt
LinuxLightDipSensor/app/: CMakeLists.txt
LinuxLightDipSensor/app/src/: main.c
LinuxLightDipSensor/hal/: CMakeLists.txt
LinuxLightDipSensor/hal/include/hal/: PWM.h  accessRot.h  accessSPI.h  lightDips.h  periodTimer.h  sampling.h  terminal.h  udp.h
LinuxLightDipSensor/hal/src/: PWM.c  accessRot.c  accessSPI.c  lightDips.c  periodTimer.c  sampling.c  terminal.c  udp.c
ReactionTimer/: CMakeLists.txt  README.md  as1-capture.txt
ReactionTimer/app/: CMakeLists.txt
ReactionTimer/app/src/: main.c
ReactionTimer/hal/: CMakeLists.txt
ReactionTimer/hal/include/hal/: ledControl.h
ReactionTimer/hal/src/: accessSPI.c
myApps/quickStart/: helloworld.c  helloworld_host  helloworld_target
